--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>About Page</h1>
+{% extends 'base.html' %} {% block content %}
+<h2>About</h2>
 {% endblock %}
