--- a/templates/careers.html
+++ b/templates/careers.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>cCme work with us!</h1>
+{% extends 'base.html' %} {% block content %}
+<h2>Come Work With Us!</h2>
 {% endblock %}
