--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h3>{{ loop.index}} {{ member.name }}</h3>
+    <h3><a href="/about/{{ member.url }}">{{ loop.index}}. {{ member.name }}</a></h3>
     <p>
       {{ member.description }}
     </p>
@@ -36,7 +36,7 @@
     <img class="featurette-image image-responsive" src="{{ member.image_source }}" />
   </div>
   <div class="col-md-7">
-    <h3>{{ loop.index}} {{ member.name }}</h3>
+    <h3><a href="/about/{{ member.url }}">{{ loop.index}}. {{ member.name }}</a></h3>
     <p>
       {{ member.description }}
     </p>
